Fix gap

--- a/landing.css
+++ b/landing.css
@@ -1,3 +1,4 @@
 #landing-img {
   width: 100%;
+  height: auto;
 }
